feat: support edit and delete task
